Bring the equipment and items in line